...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.MapFragment">

    <LinearLayout
        android:id="@+id/linearLayoutMap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
            android:text="@string/map_text"
            android:textColor="@color/primary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/openAlertDialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/select_date"
            android:textSize="18sp" />
    </LinearLayout>
...
